--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     <div class="container">
 
 
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading">Panel Header</div>
             <div class="panel-body">
 
