--- a/views/registrationForm.html
+++ b/views/registrationForm.html
@@ -42,12 +42,12 @@
 
                         <div class="form-group">
                             <label>E-Mail:</label>
-                            <input type="text" name="lName" class="form-control" placeholder="email" autofocus>
+                            <input type="text" name="lName" ng-model="email" class="form-control" placeholder="email" autofocus>
                         </div>
 
                         <label class="radio-inline">Gender:</label>
-                        <input type="radio" name="gender">Male
-                        <input type="radio" name="gender">Female
+                        <input type="radio" name="gender" ng-model="gender">Male
+                        <input type="radio" name="gender" ng-model="gender">Female
 
 
 
@@ -59,21 +59,21 @@
                     <div class="col-lg-6">
                         <div class="form-group">
                             <label>Password:</label>
-                            <input type="password" name="password" class="form-control" placeholder="Password" autofocus>
+                            <input type="password" name="password" ng-model="password" class="form-control" placeholder="Password" autofocus>
                         </div>
 
                         <div class="form-group">
                             <label>Address:</label>
-                            <textarea name="Address" class="form-control" cols="10" rows="5" placeholder="Address"></textarea>
+                            <textarea name="Address" ng-model="address" class="form-control" cols="10" rows="5" placeholder="Address"></textarea>
                         </div>
 
                         <div class="form-group">
                             <label>Mobile:</label>
-                            <input type="tel" name="mobile_no" class="form-control" placeholder="Mobile Number">
+                            <input type="tel" name="mobile_no" ng-model="mobile" class="form-control" placeholder="Mobile Number">
                         </div>
                         <div class="form-group">
                             <label>City:</label>
-                            <input type="text" name="city" class="form-control" placeholder="City" autofocus>
+                            <input type="text" name="city" ng-model="city" class="form-control" placeholder="City" autofocus>
                         </div>
 
                     </div>
@@ -88,23 +88,23 @@
             <div class="col-lg-6">
                 <div class="form-group">
                     <label>Pin-Code:</label>
-                    <input type="text" name="zip_code" class="form-control" placeholder="Pin-Code" autofocus>
+                    <input type="text" name="pin_code" ng-model="pinCode" class="form-control" placeholder="Pin-Code" autofocus>
                 </div>
 
                 <div class="form-group">
                     <label>State:</label>
-                    <input type="text" name="state" class="form-control" placeholder="State" autofocus>
+                    <input type="text" name="state" ng-model="state" class="form-control" placeholder="State" autofocus>
                 </div>
 
 
                 <div class="form-group">
                     <label>Country</label>
-                    <input type="text" name="country" class="form-control" placeholder="Country" autofocus>
+                    <input type="text" name="country" ng-model="country" class="form-control" placeholder="Country" autofocus>
                 </div>
 
                 <div class="form-group">
                     <label>Hobbies: </label>
-                    <input type="text" name="hobbie" class="form-control" placeholder="Hobbies" autofocus multiple>
+                    <input type="text" name="hobbie" ng-model="hobbies" class="form-control" placeholder="Hobbies" autofocus multiple>
                 </div>
 
             </div>
@@ -113,7 +113,7 @@
 
                 <div class="form-group">
                     <label>Qualification:</label>
-                    <select name="qualification" id="qualification" class="form-control">
+                    <select name="qualification" id="qualification" ng-model="qualification" class="form-control">
                             <option value="-1">-select-</option>
                             <option value="B.Tech">B.Tech</option>
                             <option value="B.E.">B.E.</option>
@@ -125,7 +125,7 @@
 
                 <div class="form-group">
                     <label>Pass-Out:</label>
-                    <select name="passout" id="passout" class="form-control">
+                    <select name="passout" id="passout" ng-model="passout" class="form-control">
                             <option value="-1">Year</option>
                             <option value="2013">2013</option>
                             <option value="2014">2014</option>
@@ -137,7 +137,7 @@
 
                 <div class="form-group">
                     <label>Percentage/CGPA:</label>
-                    <input type="text" name="percentage" placeholder="Percentage/CGPA" class="form-control">
+                    <input type="text" name="percentage" ng-model="cgpa" placeholder="Percentage/CGPA" class="form-control">
 
                 </div>
 
@@ -165,7 +165,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label>Dob:</label>
-                    <select name="Birth_Day" id="Birth_Day" class="form-control">
+                    <select name="Birth_Day" id="Birth_Day"  class="form-control">
                   <option value="">Day</option> <!-- not selected / blank option -->
                 <option ng-repeat="d in birth_day" value="{{d}}">{{d}}</option>
                 
